// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createEndpoint returns a state object 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "name": "Endpoint name",
    },
    "notifications": Object {
      "fulfilled": Object {
        "title": "Endpoint Endpoint name created",
        "variant": "success",
      },
    },
  },
  "payload": Promise {},
  "type": "SUBMIT_ENDPOINT",
}
`;

exports[`deleteEndpoint returns a state object 1`] = `
Object {
  "meta": Object {
    "notifications": Object {
      "fulfilled": Object {
        "title": "Endpoint Endpoint name deleted",
        "variant": "success",
      },
    },
  },
  "payload": Promise {},
  "type": "DELETE_ENDPOINT",
}
`;

exports[`fetchApps returns a state object 1`] = `
Object {
  "payload": Promise {},
  "type": "FETCH_APPS",
}
`;

exports[`fetchEndpoint returns a state object 1`] = `
Object {
  "payload": Promise {},
  "type": "FETCH_ENDPOINT",
}
`;

exports[`fetchEndpoints returns a state object 1`] = `
Object {
  "meta": Object {
    "endpoint": "/endpoints?offset=0&limit=10&sort_by=name asc",
    "partial": false,
    "sortBy": "name asc",
  },
  "payload": Promise {},
  "type": "FETCH_ENDPOINTS",
}
`;

exports[`fetchFilter returns a state object 1`] = `
Object {
  "payload": Promise {},
  "type": "FETCH_FILTER",
}
`;

exports[`newEndpoint returns a state object 1`] = `
Object {
  "type": "NEW_ENDPOINT",
}
`;

exports[`testEndpoint returns a state object 1`] = `
Object {
  "meta": Object {
    "endpointId": 1,
    "notifications": Object {
      "fulfilled": Object {
        "title": "Test event delivery successful",
        "variant": "success",
      },
    },
  },
  "payload": Promise {},
  "type": "TEST_ENDPOINT",
}
`;

exports[`toggleEndpoint returns a state object 1`] = `
Object {
  "payload": Promise {},
  "type": "SUBMIT_ENDPOINT",
}
`;

exports[`updateEndpoint() returns a state object 1`] = `
Object {
  "meta": Object {
    "data": Object {
      "name": "Endpoint name",
    },
    "notifications": Object {
      "fulfilled": Object {
        "title": "Endpoint Endpoint name updated",
        "variant": "success",
      },
    },
  },
  "payload": Promise {},
  "type": "SUBMIT_ENDPOINT",
}
`;
